# SemiGlobalMatching_cpu

./: CMakeLists.txt
include/: SemiGlobalMatching.h  sgm_types.h  sgm_util.h
src/: SemiGlobalMatching.cpp  main.cpp  sgm_util.cpp
